# Optimization-MH

./: .gitignore  CMakeLists.txt  Makefile  README.txt  main_tmp.cpp
data/: diabetes.arff
files/results/: diabetes_results.txt  heart_results.txt  ionosphere_results.txt  parkinsons_results.txt
files/tests/: test_data_reading_1.txt  test_data_reading_2.txt  test_data_reading_3.txt  test_data_reading_4.txt  test_knn_classifier_1.txt  test_knn_classifier_2.txt  test_knn_classifier_3.txt  test_knn_classifier_4.txt  test_partitions_1.txt  test_partitions_2.txt  test_partitions_3.txt  test_partitions_4.txt  test_shuffled_data_1.txt  test_shuffled_data_2.txt  test_shuffled_data_3.txt  test_shuffled_data_4.txt
include/: Data.h  MLAlgorithms.h  Tests.h  ToolsHelper.h  data.h  math_tools.h  ml_tools.h  optimizers.h  seed.h  tests.h  tools_helper.h
scripts/: run.sh  script_apc.sh
src/: Data.cpp  MLAlgorithms.cpp  Tests.cpp  ToolHelper.cpp  ToolsHelper.cpp  data.cpp  main.cpp  math_tools.cpp  ml_tools.cpp  optimizers.cpp  seed.cpp  tests.cpp  tools_helper.cpp
